# haskell-xmpp

./: .gitignore  Changelog.md  LICENSE  README.md  default.nix  haskell-xmpp.cabal  haskell-xmpp.nix  shell.nix  stack.yaml
examples/: Test.hs
nix/: ci-server.nix  ejabberd.yml  haskell-xmpp.nix  nixpkgs.nix  test.nix
src/Network/: XMPP.hs
src/Network/XMPP/: Base64.hs  Concurrent.hs  Core.hs  Ejabberd.hs  Helpers.hs  IQ.hs  JID.hs  MD5.hs  Print.hs  Sasl.hs  Stanza.hs  Stream.hs  Types.hs  UTF8.hs  Utils.hs  XML.hs
src/Network/XMPP/IM/: Presence.hs
src/Network/XMPP/XEP/: Delayed.hs  Form.hs  MAM.hs  MUC.hs  Version.hs
test/: Main.hs  RoomSpec.hs  TestSuiteSpec.hs
