Name: haskell-xmpp
Version: 1.1.0
License: BSD3
License-File: LICENSE
Author: Dmitry Astapov <dastapov@gmail.com>, pierre <k.pierre.k@gmail.com>
Maintainer: Dmitry Astapov <dastapov@gmail.com>
Homepage: http://patch-tag.com/r/adept/haskell-xmpp/home
Category: Network
Copyright: (c) 2005-2011 Dmitry Astapov, k.pierre
Stability: Stable
Cabal-version: >=1.6
Tested-with: GHC==8.8.3
Build-type: Simple
Bug-reports: mailto: dastapov@gmail.com
Extra-source-files: README.md examples/Test.hs

Synopsis: Haskell XMPP (eXtensible Message Passing Protocol, a.k.a. Jabber) library
Description: Haskell XMPP (eXtensible Message Passing Protocol, a.k.a. Jabber) library
  .
  Unlike package network-protocol-xmpp, which uses libxml-sax, this library uses HaXml and supports MUC.
  However, MUC support of the moment is worse than that in package XMPP.
  .
  This library make extensive use of STM and threads to simplify writing message-handling code.

source-repository head
  type: darcs
  location: adept@patch-tag.com:/r/adept/haskell-xmpp

flag examples
  description: Build examples
  default: False

flag debug
  description: Enable debugging output
  default: False

library
  Hs-Source-Dirs: ./src
  Build-Depends: base
               , random
               , pretty
               , array
               , mtl
               , HaXml
               , network
               , network-bsd
               , html
               , polyparse
               , regex-compat
               , stm
               , utf8-string
               , uuid
               , xml-hamlet
               , xml-conduit
               , text
               , blaze-markup
               , singlethongs
               , time
               , unliftio

  Exposed-modules: Network.XMPP
                 , Network.XMPP.Sasl
                 , Network.XMPP.Core
                 , Network.XMPP.Types
                 , Network.XMPP.Print
                 , Network.XMPP.Helpers
                 , Network.XMPP.Stream
                 , Network.XMPP.Stanza
                 , Network.XMPP.Utils
                 , Network.XMPP.IM.Presence
                 , Network.XMPP.IQ
                 , Network.XMPP.UTF8
                 , Network.XMPP.XML
                 , Network.XMPP.MD5
                 , Network.XMPP.Base64
                 , Network.XMPP.XEP.MUC
                 , Network.XMPP.XEP.MAM
                 , Network.XMPP.XEP.Form
                 , Network.XMPP.XEP.Delayed
                 , Network.XMPP.XEP.Version
                 , Network.XMPP.Concurrent
  GHC-Options: -Wall -Wincomplete-patterns -fno-warn-name-shadowing -fno-warn-orphans
  if flag(debug)
     CPP-Options: -DDEBUG

Executable haskell-xmpp-test
  Hs-Source-Dirs: ./src ./examples
  if flag(examples)
    build-depends: base > 3 && <=5
  else
    buildable: False
  if flag(debug)
     CPP-Options: -DDEBUG
  Main-Is: Test.hs
  GHC-Options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
